--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -60,6 +60,7 @@
 			</form>
 			<div class="col-md-2 pull-right" id="Login-Registro-Div">
 			<!---->
+				<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno">DESCARGAR</a>
 				<a href="#" class="btn btn-primary barraBusquedaHome" role="button" data-toggle="dropdown">Registrarse</a>
 				<ul class="dropdown-menu col-md-2 ">
 					<li><a href="#" onclick="setRegistroTipo('proveedor');mostrarElemento('registroUsuario')">Soy Proveedor</a></li>
@@ -91,7 +92,7 @@
 					<h3>Aplicacion 4</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>						
 						USD 2.0
 					</p>
@@ -106,7 +107,7 @@
 					<h3>Aplicacion 3</h3>
 					<p>Descripcion</p>
 					<p class="precio">
-						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -121,7 +122,7 @@
 					<h3>Aplicacion 2</h3>
 					<p>Descripcion</p>
 					<p class="precio">
-						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -136,7 +137,7 @@
 					<h3>Aplicacion 1</h3>
 					<p>Descripcion</p>
 					<p class="precio">
-						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -159,7 +160,7 @@
 					<h3>Libro 1</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -174,7 +175,7 @@
 					<h3>Libro 1</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -189,7 +190,7 @@
 					<h3>Libro 1</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -204,7 +205,7 @@
 					<h3>Libro 1</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>
 						USD 2.0
 					</p>
@@ -228,7 +229,7 @@
 					<h2>Video 1</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -243,7 +244,7 @@
 					<h2>Video 2</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -258,7 +259,7 @@
 					<h2>Video 3</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -273,7 +274,7 @@
 					<h2>Video 4</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -297,7 +298,7 @@
 					<h2>Musica 1</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -312,7 +313,7 @@
 					<h2>Musica 2</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -327,7 +328,7 @@
 					<h2>Musica 3</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -342,7 +343,7 @@
 					<h2>Musica 4</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
