--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -92,7 +92,7 @@
 					<h3>Aplicacion 4</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="c3.html?id=3" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>						
 						USD 2.0
 					</p>
@@ -107,7 +107,7 @@
 					<h3>Aplicacion 3</h3>
 					<p>Descripcion</p>
 					<p class="precio">
-						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=3" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -122,7 +122,7 @@
 					<h3>Aplicacion 2</h3>
 					<p>Descripcion</p>
 					<p class="precio">
-						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=3" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -137,7 +137,7 @@
 					<h3>Aplicacion 1</h3>
 					<p>Descripcion</p>
 					<p class="precio">
-						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=3" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -160,7 +160,7 @@
 					<h3>Libro 1</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="c2ntent.html?id=2" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -175,7 +175,7 @@
 					<h3>Libro 1</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=2" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -190,7 +190,7 @@
 					<h3>Libro 1</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=2" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -205,7 +205,7 @@
 					<h3>Libro 1</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=2" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>
 						USD 2.0
 					</p>
@@ -229,7 +229,7 @@
 					<h2>Video 1</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=4" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -244,7 +244,7 @@
 					<h2>Video 2</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=4" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -259,7 +259,7 @@
 					<h2>Video 3</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=4" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -274,7 +274,7 @@
 					<h2>Video 4</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=4" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
