pantalla - Alta de contenido v1.0

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin.html
@@ -1,19 +1,17 @@
-
-<link rel="stylesheet" type="text/css" href="css/bootstrap.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="css/jquery-ui.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="css/Admin_Home.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="css/market.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="css/alertify.core.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="css/alertify.default.css" media="screen" />
-
 <!DOCTYPE html>
-<html>
-
 <head>
-<meta charset="ISO-8859-1">
-<title>Modulo Administrador</title>
+    <title>Administracion - MarketPlace</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="css/jquery-ui.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="css/Admin_Home.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="css/market.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="css/alertify.core.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="css/alertify.default.css" media="screen" />
 </head>
+<html>
 <body>
 	<div class="row-fluid">
 		<div class="navbar-wrapper">
