--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/content.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/content.html
@@ -1,14 +1,19 @@
-<link rel="stylesheet" type="text/css" href="css/bootstrap.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="css/market.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="css/jquery-ui.css" media="screen" />
 
-<script src="js/jquery.min.js"></script>
+<head>
+    <title>MarketPlace Tecnologo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="css/market.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="css/jquery-ui.css" media="screen" />
+
+	<script src="js/jquery.min.js"></script>
+</head>
 
 <body>
 
 <!-- BARRA DE NAVEGACION -->
-	<nav class="navbar navbar-default " style="position: fixed !important;width: 100%;" role="navigation">
+	<nav class="navbar navbar-default navbarFija" role="navigation">
 	  <!-- El logotipo y el icono que despliega el menú se agrupan
 	       para mostrarlos menújor en los dispositivos móviles -->
 		<div class="navbar-header">
@@ -46,8 +51,7 @@
 	</nav>
 
 <!--LOGIN DE USUARIO -->
-	<div id="loginUsuario" class="modalChocolate modal" hidden style="overflow-y: auto;
-		display: none;width: 26%;min-width: 300px;margin-right: auto;">
+	<div id="loginUsuario" class="modal loginDiv hide">
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true" onclick="ocultarElemento('loginUsuario')">X</button>
 			<h3>Iniciar Sesion</h3>
@@ -68,7 +72,7 @@
 	</div>
 
 <!--REGISTRO DE USUARIO -->
-	<div id="registroUsuario" class="modalChocolate modal" hidden style="overflow-y: auto;display: none;width: 26%;min-width:500px;margin-right: auto;">
+	<div id="registroUsuario" class="modal registerDiv hide">
 		<div class="modal-header">
 	    	<button type="button" class="close" data-dismiss="modal" aria-hidden="true" 
 	    		onclick="ocultarElemento('registroUsuario')">X</button>
@@ -82,7 +86,7 @@
 					<p>Contrase&ntilde;a    <input type="password" class="col-md-12 form-control" id="inputPass"></p>
 					<p>Contrase&ntilde;a    <input type="password" class="col-md-12 form-control" id="inputPass2"></p>
 					<p>Nombre Usuario  		<input type="text" class="col-md-12 form-control" id="inputNick"></p>
-					<p id="sitioWeb_p">Sitio Web 	  		<input type="text" class="col-md-12 form-control" id="inputWeb"></p>
+					<p id="sitioWeb_p">Sitio Web <input type="text" class="col-md-12 form-control" id="inputWeb"></p>
 				</div>
 				<div class="col-md-6">
 					<h4>Datos Personales</h4>
@@ -101,7 +105,7 @@
 		</div>
 		<div class="modal-footer">
 			<button type="button" data-dismiss="modal" class="btn" onclick="ocultarElemento('registroUsuario')">Cerrar</button>
-			<button type="button" class="btn btn-primary" onclick="crearProveedor()">Confirmar</button>
+			<button type="button" class="btn btn-primary" onclick="crearMiembro()">Confirmar</button>
 		</div>
 	</div>
 
