--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -1,44 +1,19 @@
-<link rel="stylesheet" type="text/css" href="css/bootstrap.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="css/market.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="css/jquery-ui.css" media="screen" />
+<!DOCTYPE html>
+<head>
+    <title>MarketPlace Tecnologo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<script src="js/jquery.min.js"></script>
-<!--
-<style type="text/css" media="screen">
-	.overlay{
-	     display: none;
-	     position: absolute;
-	     top: 0;
-	     left: 0;
-	     width: 100%;
-	     height: 100%;
-	     background: #000;
-	     z-index:1001;
-	     opacity:.75;
-	     -moz-opacity: 0.75;
-	     filter: alpha(opacity=75);
-	}
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css" media="screen"/>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css" media="screen"/>
+	<link rel="stylesheet" type="text/css" href="css/market.css" media="screen"/>
+	<link rel="stylesheet" type="text/css" href="css/jquery-ui.css" media="screen"/>
+	<script src="js/jquery.min.js"></script>
+</head>
 
-	.modal {
-	     display: none;
-	     position: absolute;
-	     top: 25%;
-	     left: 25%;
-	     width: 50%;
-	     height: 50%;
-	     padding: 16px;
-	     background: #fff;
-	     color: #333;
-	     z-index:1002;
-	     overflow: auto;
-	}
-</style>
--->
 <body class="overlay">
 
 <!-- BARRA DE NAVEGACION -->
-	<nav class="navbarFija navbar navbar-default " style="position: fixed !important;width: 100%;" role="navigation">
+	<nav class="navbarFija navbar navbar-default " role="navigation">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse"
 				data-target=".navbar-ex1-collapse">
@@ -59,16 +34,11 @@
 					<span class="glyphicon glyphicon-search"></span> Buscar</button>
 			</form>
 			<div class="col-md-2 pull-right" id="Login-Registro-Div">
-			<!---->
-				<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno">DESCARGAR</a>
 				<a href="#" class="btn btn-primary barraBusquedaHome" role="button" data-toggle="dropdown">Registrarse</a>
 				<ul class="dropdown-menu col-md-2 ">
 					<li><a href="#" onclick="setRegistroTipo('proveedor');mostrarElemento('registroUsuario')">Soy Proveedor</a></li>
 					<li><a href="#" onclick="setRegistroTipo('cliente');mostrarElemento('registroUsuario')">Soy Cliente</a></li>
-				</ul>		
-				<!--
-					<button class="btn btn-primary barraBusquedaHome" href="#registroUsuario" onclick="mostrarElemento('registroUsuario')">Registrarse</button>
-				-->
+				</ul>
 				<button class="btn btn-primary barraBusquedaHome" onclick="mostrarElemento('loginUsuario')">Login</button>
 			</div>
 			<div class="col-md-2 pull-right" id="Nick-Logout-Div" hidden>
@@ -84,7 +54,7 @@
 		<h2 class="col-md-12 pull-right styleTits" style="color:black; text-align: left;">Aplicaciones</h2>
 	</div>
 	<div class="col-md-12 separador"></div>
-	<div class="row">
+	<div class="row centerContent">
 		<div id="aplicacion1"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
 				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-circle miniatura">
@@ -92,8 +62,8 @@
 					<h3>Aplicacion 4</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="c3.html?id=3" class="btn btn-primary" role="button">Ver</a>
-						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>						
+						<a href="content.html?id=3" class="btn btn-primary" role="button">Ver</a>
+						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
 				</div>
@@ -152,7 +122,7 @@
 		<h2 class="col-md-12 pull-right styleTits" style="color:white; text-align: right;">Libros</h2>
 	</div>
 	<div class="col-md-12 separador"></div>
-	<div class="row">
+	<div class="row centerContent">
 		<div id="libro1"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
 				<img src="img/li1.jpg" alt="img/mu1.jpg" class="img-circle miniatura">
@@ -160,7 +130,7 @@
 					<h3>Libro 1</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="c2ntent.html?id=2" class="btn btn-primary" role="button">Ver</a>
+						<a href="content.html?id=2" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -221,7 +191,7 @@
 	</div>
 	<div class="col-md-12 separador"></div>
 	
-	<div class="row">
+	<div class="row centerContent">
 		<div id="video1"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
 				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-circle miniatura">
@@ -290,7 +260,7 @@
 		<h2 class="col-md-12 pull-right styleTits" style="text-align: right;">Musica</h2>
 	</div>
 	<div class="col-md-12 separador"></div>
-	<div class="row">
+	<div class="row centerContent">
 		<div id="musica1"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
 				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-circle miniatura">
@@ -355,12 +325,12 @@
 	<div class="col-md-12 separador"></div>
 
 <!-- LOGIN DE USUARIO -->	
-	<div id="loginUsuario" class="modalChocolate modal" hidden style="overflow-y: auto;
-		display: block;width: 26%;min-width: 300px;margin-right: auto;">
+	<div id="loginUsuario" class="modal loginDiv hide">
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true" onclick="ocultarElemento('loginUsuario')">X</button>
 			<h3>Iniciar Sesion</h3>
 		</div>
+
 		<div class="modal-body">
 			<div class="row">
 				<div class="col-md-12">
@@ -377,7 +347,7 @@
 	</div>
 
 <!-- REGISTRO DE USUARIO -->
-	<div id="registroUsuario" class="modalChocolate modal" hidden style="overflow-y: auto;display: block;width: 26%;min-width: 500px;margin-right: auto;">
+	<div id="registroUsuario" class="modal registerDiv hide">
 	  <div class="modal-header">
 	    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" 
 	    		onclick="ocultarElemento('registroUsuario')">X</button>
@@ -392,7 +362,7 @@
 					<p>Contrase&ntilde;a    <input type="password" class="col-md-12 form-control" id="inputPass"></p>
 					<p>Contrase&ntilde;a    <input type="password" class="col-md-12 form-control" id="inputPass2"></p>
 					<p>Nombre Usuario  		<input type="text" class="col-md-12 form-control" id="inputNick"></p>
-					<p id="sitioWeb_p">Sitio Web 	  		<input type="text" class="col-md-12 form-control" id="inputWeb"></p>
+					<p id="sitioWeb_p">Sitio Web <input type="text" class="col-md-12 form-control" id="inputWeb"></p>
 				</div>
 				<div class="col-md-6">
 					<h4>Datos Personales</h4>
@@ -411,7 +381,7 @@
 		</div>
 		<div class="modal-footer">
 			<button type="button" data-dismiss="modal" class="btn" onclick="ocultarElemento('registroUsuario')">Cerrar</button>
-			<button type="button" class="btn btn-primary" onclick="crearProveedor()">Confirmar</button>
+			<button type="button" class="btn btn-primary" onclick="crearMiembro()">Confirmar</button>
 		</div>
 	</div>
 
