--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/content.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/content.html
@@ -109,10 +109,10 @@
 		</div>
 	</div>
 
-<!-- CONTENIDO / CUERPO DE LA VISTA-->
+<!-- CONTENIDO / CUERPO DE LA VISTA -->
 	<div id="MP_Content"  class="col-md-4" style="padding-top: 5em;text-align: center;">
 	</div>
-	<div id="MP_Canvas" class="col-md-7" style="padding-top: 5em;">
+	<div id="MP_Canvas" class="col-md-12" style="padding-top: 5em;">
 		<h4 id="MP_Descripcion"></h4>
 		<div id="EspecificosTipoContenido" class="col-md-12 Especificos">
 			<div id="espMusica" style="display:none">
@@ -140,9 +140,12 @@
 		</p>
 		<a href="#" id="comprarBtn" class="btn btn-info" role="button">Comprar</a>	
 		<p id="MP_Precio" class="precioContenido"></p>
-
 	</div>
-
+	<div class="col-md-15">
+		<h2>Opiniones de los Usuarios</h2>
+		------------------------------------
+		<h4>Me gusta mucho este contenido :D</h4>
+	</div>
 </body>
 
 <script src="js/jquery-ui.js"></script>
