--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <head>
     <title>Administracion - MarketPlace</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="description" content="Pagina de administracion del marketplace.">
 	
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css" media="screen" />
