--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/AltaContenido.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/AltaContenido.html
@@ -13,82 +13,61 @@
 -->
 <html lang="en">
     <head>
-        <!-- Force latest IE rendering engine or ChromeFrame if installed -->
-        <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><![endif]-->
         <meta charset="utf-8">
-        <title>jQuery File Upload Demo</title>
-        <meta name="description" content="File Upload widget with multiple file selection, drag&amp;drop support, progress bar and preview images for jQuery. Supports cross-domain, chunked and resumable file uploads. Works with any server-side platform (Google App Engine, PHP, Python, Ruby on Rails, Java, etc.) that supports standard HTML form file uploads.">
+        <title>Crear Contenido</title>
+        <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <!-- Bootstrap CSS Toolkit styles -->
-        <link rel="stylesheet" href="css2/bootstrap.min.css">
-        <!-- Generic page styles -->
-        <link rel="stylesheet" href="css2/style.css">
-        <!-- Bootstrap styles for responsive website layout, supporting different screen sizes -->
-        <link rel="stylesheet" href="css2/bootstrap-responsive.min.css">
-        <!-- Bootstrap CSS fixes for IE6 -->
-        <!--[if lt IE 7]><link rel="stylesheet" href="http://blueimp.github.com/cdn/css2/bootstrap-ie6.min.css"><![endif]-->
-        <!-- Bootstrap Image Gallery styles -->
-        <link rel="stylesheet" href="css2/bootstrap-image-gallery.min.css">
-        <!-- CSS to style the file input field as button and adjust the Bootstrap progress bars -->
-        <link rel="stylesheet" href="css2/jquery.fileupload-ui.css">
-        <!-- Shim to make HTML5 elements usable in older Internet Explorer versions -->
-        <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+        <link rel="stylesheet" href="css/FU_bootstrap.min.css">
+        <link rel="stylesheet" href="css/FU_style.css">
+        <link rel="stylesheet" href="css/FU_bootstrap-responsive.min.css">
+        <link rel="stylesheet" href="css/FU_bootstrap-image-gallery.min.css">
+        <link rel="stylesheet" href="css/FU_jquery.fileupload-ui.css">
     </head>
     <body>
         <div class="container">
             <div class="page-header">
-                <h1>jQuery File Upload Demo</h1>
+                <h1>Subir Nuevo Contenido</h1>
             </div>
             <blockquote>
-                <p>File Upload widget with multiple file selection, drag&amp;drop support, progress bars and preview images for jQuery.<br>
-                    Supports cross-domain, chunked and resumable file uploads and client-side image resizing.<br>
-                    Works with any server-side platform (PHP, Python, Ruby on Rails, Java, Node.js, Go etc.) that supports standard HTML form file uploads.</p>
+                <p>Para crear un nuevo contenido, debera llenar el formulario y seleccionar la ubicacion del contenido a subir.</p>
             </blockquote>
             <br>
-            <!-- The file upload form used as target for the file upload widget -->
             <form id="fileupload" action="upload" method="POST" enctype="multipart/form-data">
-                <!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
                 <div class="row fileupload-buttonbar">
                     <div class="span7">
-                        <!-- The fileinput-button span is used to style the file input field as button -->
                         <span class="btn btn-success fileinput-button">
                             <i class="icon-plus icon-white"></i>
-                            <span>Add files...</span>
+                            <span>Agregar..</span>
                             <input type="file" name="files[]" multiple>
                         </span>
                         <button type="submit" class="btn btn-primary start">
                             <i class="icon-upload icon-white"></i>
-                            <span>Start upload</span>
+                            <span>Subir</span>
                         </button>
                         <button type="reset" class="btn btn-warning cancel">
                             <i class="icon-ban-circle icon-white"></i>
-                            <span>Cancel upload</span>
+                            <span>Cancelar</span>
                         </button>
                         <button type="button" class="btn btn-danger delete">
                             <i class="icon-trash icon-white"></i>
-                            <span>Delete</span>
+                            <span>Borrar</span>
                         </button>
                         <input type="checkbox" class="toggle">
                     </div>
-                    <!-- The global progress information -->
                     <div class="span5 fileupload-progress fade">
-                        <!-- The global progress bar -->
                         <div class="progress progress-success progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100">
                             <div class="bar" style="width:0%;"></div>
                         </div>
-                        <!-- The extended global progress information -->
                         <div class="progress-extended">&nbsp;</div>
                     </div>
                 </div>
-                <!-- The loading indicator is shown during file processing -->
                 <div class="fileupload-loading"></div>
                 <br>
-                <!-- The table listing the files available for upload/download -->
                 <table role="presentation" class="table table-striped"><tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody></table>
             </form>
             <br>
             <div class="well">
-                <h3>Demo Notes</h3>
+                <h3>Notas</h3>
                 <ul>
                     <li>The maximum file size for uploads in this demo is <strong>5 MB</strong> (default file size is unlimited).</li>
                     <li>Only image files (<strong>JPG, GIF, PNG</strong>) are allowed in this demo (by default there is no file type restriction).</li>
@@ -185,31 +164,31 @@
         </tr>
         {% } %}
     </script>
-    <script src="js2/jquery-1.8.2.min.js"></script>
+    <script src="js/FU_jquery-1.8.2.min.js"></script>
     <!-- The jQuery UI widget factory, can be omitted if jQuery UI is already included -->
-    <script src="js2/vendor/jquery.ui.widget.js"></script>
+    <script src="js/FU_vendor/jquery.ui.widget.js"></script>
     <!-- The Templates plugin is included to render the upload/download listings -->
-    <script src="js2/tmpl.min.js"></script>
+    <script src="js/FU_tmpl.min.js"></script>
     <!-- The Load Image plugin is included for the preview images and image resizing functionality -->
-    <script src="js2/load-image.min.js"></script>
+    <script src="js/FU_load-image.min.js"></script>
     <!-- The Canvas to Blob plugin is included for image resizing functionality -->
-    <script src="js2/canvas-to-blob.min.js"></script>
+    <script src="js/FU_canvas-to-blob.min.js"></script>
     <!-- Bootstrap JS and Bootstrap Image Gallery are not required, but included for the demo -->
-    <script src="js2/bootstrap.min.js"></script>
-    <script src="js2/bootstrap-image-gallery.min.js"></script>
+    <script src="js/FU_bootstrap.min.js"></script>
+    <script src="js/FU_bootstrap-image-gallery.min.js"></script>
     <!-- The Iframe Transport is required for browsers without support for XHR file uploads -->
-    <script src="js2/jquery.iframe-transport.js"></script>
+    <script src="js/FU_jquery.iframe-transport.js"></script>
     <!-- The basic File Upload plugin -->
-    <script src="js2/jquery.fileupload.js"></script>
+    <script src="js/FU_jquery.fileupload.js"></script>
     <!-- The File Upload file processing plugin -->
-    <script src="js2/jquery.fileupload-fp.js"></script>
+    <script src="js/FU_jquery.fileupload-fp.js"></script>
     <!-- The File Upload user interface plugin -->
-    <script src="js2/jquery.fileupload-ui.js"></script>
+    <script src="js/FU_jquery.fileupload-ui.js"></script>
     <!-- The localization script -->
-    <script src="js2/locale.js"></script>
+    <script src="js/FU_locale.js"></script>
     <!-- The main application script -->
-    <script src="js2/main.js"></script>
+    <script src="js/FU_main.js"></script>
     <!-- The XDomainRequest Transport is included for cross-domain file deletion for IE8+ -->
-    <!--[if gte IE 8]><script src="js2/cors/jquery.xdr-transport.js"></script><![endif]-->
+    <!--[if gte IE 8]><script src="js/FU_cors/jquery.xdr-transport.js"></script><![endif]-->
 </body> 
 </html>
