cambio de ubicacion de las views 2.0

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -65,7 +65,7 @@
 					<h3>Aplicacion 4</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=3" class="btn btn-primary" role="button">Ver</a>
+						<a href="views/content.html?id=3" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -80,7 +80,7 @@
 					<h3>Aplicacion 3</h3>
 					<p>Descripcion</p>
 					<p class="precio">
-						<a href="content.html?id=3" class="btn btn-primary" role="button">Ver</a>
+						<a href="views/content.html?id=3" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -95,7 +95,7 @@
 					<h3>Aplicacion 2</h3>
 					<p>Descripcion</p>
 					<p class="precio">
-						<a href="content.html?id=3" class="btn btn-primary" role="button">Ver</a>
+						<a href="views/content.html?id=3" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -110,7 +110,7 @@
 					<h3>Aplicacion 1</h3>
 					<p>Descripcion</p>
 					<p class="precio">
-						<a href="content.html?id=3" class="btn btn-primary" role="button">Ver</a>
+						<a href="views/content.html?id=3" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -133,7 +133,7 @@
 					<h3>Libro 1</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=2" class="btn btn-primary" role="button">Ver</a>
+						<a href="views/content.html?id=2" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -148,7 +148,7 @@
 					<h3>Libro 1</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=2" class="btn btn-primary" role="button">Ver</a>
+						<a href="views/content.html?id=2" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -163,7 +163,7 @@
 					<h3>Libro 1</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=2" class="btn btn-primary" role="button">Ver</a>
+						<a href="views/content.html?id=2" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -178,7 +178,7 @@
 					<h3>Libro 1</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=2" class="btn btn-primary" role="button">Ver</a>
+						<a href="views/content.html?id=2" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>
 						USD 2.0
 					</p>
@@ -202,7 +202,7 @@
 					<h2>Video 1</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=4" class="btn btn-primary" role="button">Ver</a>
+						<a href="views/content.html?id=4" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -217,7 +217,7 @@
 					<h2>Video 2</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=4" class="btn btn-primary" role="button">Ver</a>
+						<a href="views/content.html?id=4" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -232,7 +232,7 @@
 					<h2>Video 3</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=4" class="btn btn-primary" role="button">Ver</a>
+						<a href="views/content.html?id=4" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -247,7 +247,7 @@
 					<h2>Video 4</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=4" class="btn btn-primary" role="button">Ver</a>
+						<a href="views/content.html?id=4" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -271,7 +271,7 @@
 					<h2>Musica 1</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -286,7 +286,7 @@
 					<h2>Musica 2</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -301,7 +301,7 @@
 					<h2>Musica 3</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
@@ -316,7 +316,7 @@
 					<h2>Musica 4</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
-						<a href="content.html?id=1" class="btn btn-primary" role="button">Ver</a>
+						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
 						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
