Esqueleto de ABM armado para Categorias con JSF.

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
@@ -38,7 +38,7 @@
 				<li><a href="#">Proveedores</a></li>
 				<li><a href="#">Cotizaciones</a></li>
 				<li><a href="#">Comentarios</a></li>
-				<li><a onclick="loadABMCategorias()" href="#">Categorias</a></li>
+				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialCategorias.xhtml">Categorias</a></li>
 				<li><a href="#">Subcategorias</a></li>
 				<li><a href="#">Otros</a></li>
 			</ul>	
@@ -46,9 +46,7 @@
 		<div class="col-md-10">
 			<div class="container marketing" style="height: 75%">
 				<div class="row-fluid">
-					<div id="wrapperAdministracion">
-					
-					</div>
+					<ui:insert name="body"/>
 				</div>
 			</div>
 		</div>
