--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialCategorias.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialCategorias.xhtml
@@ -1,13 +1,138 @@
 
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" 
-      xmlns:ui="http://java.sun.com/jsf/facelets" 
-      xmlns:h="http://java.sun.com/jsf/html" 
-      xmlns:f="http://java.sun.com/jsf/core">
-<body>
-<h:form>
-<center><h:inputText value="#{categoriaBean.algo}"></h:inputText></center>
-</h:form>
-</body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core">
+
+<ui:composition template="admin.xhtml">
+	<ui:define name="body">
+
+		<h:form>
+			<div>
+				<h2>Gestion de categorias</h2>
+				
+				<h:commandButton style="float:right" action="#{categoriaMB.mostrarPanelIngreso}" value="Nuevo">
+					<!--  <h:graphicImage library="images" class="btnNuevo" value="../img/agregarServicio.jpeg" />  -->
+				</h:commandButton>
+			</div>
+
+			<h:dataTable value="#{categoriaMB.listaCategorias}" var="o"
+				styleClass="order-table" headerClass="order-table-header"
+				rowClasses="order-table-odd-row,order-table-even-row"
+				class="table table-striped">
+
+				<!-- column header -->
+				<!-- row record -->
+				<h:column>
+					<f:facet name="header">Id</f:facet>
+					#{o.id}
+				</h:column>
+
+				<h:column>
+					<f:facet name="header">Nombre</f:facet>
+					#{o.nombre}
+				</h:column>
+
+				<h:column>
+					<f:facet name="header">Descripcion</f:facet>
+					#{o.descripcion}
+				</h:column>
+
+				<h:column>
+					<h:commandButton value="Editar" action="#{categoriaMB.mostrarPanelIngreso}" >
+						<f:setPropertyActionListener target="#{categoriaMB.currentCategoria}" value="#{o}" />
+					</h:commandButton>
+				</h:column>
+				<h:column>
+					<h:commandButton action="#{categoriaMB.mostrarPanelEliminar}" value="Eliminar">
+						<f:setPropertyActionListener target="#{categoriaMB.currentCategoria}" value="#{o}" />
+					</h:commandButton>
+				</h:column>
+			</h:dataTable>
+		</h:form>
+
+
+		<h:panelGroup id="panelModificar" rendered="#{categoriaMB.activoPanelEditar}">
+			<h:form>
+				<div class="modal loginDiv modal-dialog"
+					style="width: 300px">
+					<div class="modal-content">
+						<div class="modal-header">Modificar categoria</div>
+						<div class="modal-body">
+							<div class="row">
+								<div class="col-md-12 col-xs-10">
+									<h4>Datos de categoría</h4>
+									<p>
+										Nombre <input value="#{categoriaMB.currentCategoria.nombre}" type="text" class="col-xs-7 form-control" />
+									</p>
+									<p>
+										Descripcion <input value="#{categoriaMB.currentCategoria.descripcion}" type="text" class="col-xs-7 form-control" />
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="modal-footer">
+								<h:commandButton value="Confirmar" action="#{categoriaMB.editarCategoria}" />
+								<h:commandButton value="Cancelar" action="#{categoriaMB.ocultarPanelEditar}" />
+						</div>
+					</div>
+				</div>
+			</h:form>
+		</h:panelGroup>
+		
+		<h:panelGroup id="panelIngreso" rendered="#{categoriaMB.activoPanelIngreso}">
+			<h:form>
+				<div class="modal loginDiv modal-dialog"
+					style="width: 300px">
+					<div class="modal-content">
+						<div class="modal-header">Modificar categoria</div>
+						<div class="modal-body">
+							<div class="row">
+								<div class="col-md-12 col-xs-10">
+									<h4>Datos de categoría</h4>
+									<p>
+										Nombre <input value="#{categoriaMB.nuevaCategoria.nombre}" type="text" class="col-xs-7 form-control" />
+									</p>
+									<p>
+										Descripcion <input value="#{categoriaMB.nuevaCategoria.descripcion}" type="text" class="col-xs-7 form-control" />
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="modal-footer">
+								<h:commandButton value="Confirmar" action="#{categoriaMB.crearCategoria}" />
+								<h:commandButton value="Cancelar" action="#{categoriaMB.ocultarPanelIngreso}" />
+						</div>
+					</div>
+				</div>
+			</h:form>
+		</h:panelGroup>
+		
+		<h:panelGroup id="panelEliminar" rendered="#{categoriaMB.activoPanelEliminar}">
+		<h:form>
+		<div class="modal loginDiv modal-dialog"
+			style="width: 300px">
+			<div class="modal-content">
+				<div class="modal-header">Eliminar categoria</div>
+				<div class="modal-body">
+					<div class="row">
+						<div class="col-md-12 col-xs-10">
+							<h4>¿Seguro que desea eliminar la categoria?</h4>
+						</div>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<h:commandButton value="Confirmar" action="#{categoriaMB.eliminarCategoria}" />
+					<h:commandButton value="Cancelar" action="#{categoriaMB.ocultarPanelEliminar}" />
+				</div>
+			</div>
+		</div>
+		</h:form>
+		</h:panelGroup>
+
+
+	</ui:define>
+</ui:composition>
 </html>
