ABM de Categorias casi listo. ABM de SubCategorias comenzado y falto de testing.

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
@@ -39,7 +39,7 @@
 				<li><a href="#">Cotizaciones</a></li>
 				<li><a href="#">Comentarios</a></li>
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialCategorias.xhtml">Categorias</a></li>
-				<li><a href="#">Subcategorias</a></li>
+				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialSubCategorias.xhtml">Subcategorias</a></li>
 				<li><a href="#">Otros</a></li>
 			</ul>	
 		</div>
