--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialCategorias.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialCategorias.xhtml
@@ -17,42 +17,43 @@
 					<!--  <h:graphicImage library="images" class="btnNuevo" value="../img/agregarServicio.jpeg" />  -->
 				</h:commandButton>
 			</div>
-
-			<h:dataTable value="#{categoriaMB.listaCategorias}" var="o"
-				styleClass="order-table" headerClass="order-table-header"
-				rowClasses="order-table-odd-row,order-table-even-row"
-				class="table table-striped">
-
-				<!-- column header -->
-				<!-- row record -->
-				<h:column>
-					<f:facet name="header">Id</f:facet>
-					#{o.id}
-				</h:column>
-
-				<h:column>
-					<f:facet name="header">Nombre</f:facet>
-					#{o.nombre}
-				</h:column>
-
-				<h:column>
-					<f:facet name="header">Descripcion</f:facet>
-					#{o.descripcion}
-				</h:column>
-
-				<h:column>
-					<h:commandButton value="Editar" action="#{categoriaMB.mostrarPanelIngreso}" >
-						<f:setPropertyActionListener target="#{categoriaMB.currentCategoria}" value="#{o}" />
-					</h:commandButton>
-				</h:column>
-				<h:column>
-					<h:commandButton action="#{categoriaMB.mostrarPanelEliminar}" value="Eliminar">
-						<f:setPropertyActionListener target="#{categoriaMB.currentCategoria}" value="#{o}" />
-					</h:commandButton>
-				</h:column>
-			</h:dataTable>
+			<div class="wrapperTablasAdministracion">
+				<h:dataTable value="#{categoriaMB.listaCategorias}" var="o"
+					styleClass="order-table" headerClass="order-table-header"
+					rowClasses="order-table-odd-row,order-table-even-row"
+					class="table table-striped">
+	
+					<!-- column header -->
+					<!-- row record -->
+					<h:column>
+						<f:facet name="header">Id</f:facet>
+						#{o.id}
+					</h:column>
+	
+					<h:column>
+						<f:facet name="header">Nombre</f:facet>
+						#{o.nombre}
+					</h:column>
+	
+					<h:column>
+						<f:facet name="header">Descripcion</f:facet>
+						#{o.descripcion}
+					</h:column>
+	
+					<h:column>
+						<h:commandButton value="Editar" action="#{categoriaMB.mostrarPanelEditar}" >
+							<f:setPropertyActionListener target="#{categoriaMB.currentCategoria}" value="#{o}" />
+						</h:commandButton>
+					</h:column>
+					<h:column>
+						<h:commandButton action="#{categoriaMB.mostrarPanelEliminar}" value="Eliminar">
+							<f:setPropertyActionListener target="#{categoriaMB.currentCategoria}" value="#{o}" />
+						</h:commandButton>
+					</h:column>
+				</h:dataTable>
+			</div>
 		</h:form>
-
+		
 
 		<h:panelGroup id="panelModificar" rendered="#{categoriaMB.activoPanelEditar}">
 			<h:form>
@@ -65,51 +66,58 @@
 								<div class="col-md-12 col-xs-10">
 									<h4>Datos de categoría</h4>
 									<p>
-										Nombre <input value="#{categoriaMB.currentCategoria.nombre}" type="text" class="col-xs-7 form-control" />
+										Nombre <h:inputText value="#{categoriaMB.currentCategoria.nombre}" type="text" class="col-xs-7 form-control" />
 									</p>
 									<p>
-										Descripcion <input value="#{categoriaMB.currentCategoria.descripcion}" type="text" class="col-xs-7 form-control" />
+										Descripcion <h:inputText value="#{categoriaMB.currentCategoria.descripcion}" type="text" class="col-xs-7 form-control" />
+									</p>
+									<p>
+										Habilitada <h:selectBooleanCheckbox value="#{categoriaMB.currentCategoria.habilitada}" type="checkbox"/>
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="modal-footer">
-								<h:commandButton value="Confirmar" action="#{categoriaMB.editarCategoria}" />
+								<h:commandButton id="btnConfirmarModificacion" value="Confirmar" action="#{categoriaMB.editarCategoria}" />
 								<h:commandButton value="Cancelar" action="#{categoriaMB.ocultarPanelEditar}" />
 						</div>
 					</div>
 				</div>
 			</h:form>
 		</h:panelGroup>
-		
+
 		<h:panelGroup id="panelIngreso" rendered="#{categoriaMB.activoPanelIngreso}">
 			<h:form>
 				<div class="modal loginDiv modal-dialog"
 					style="width: 300px">
 					<div class="modal-content">
-						<div class="modal-header">Modificar categoria</div>
+						<div class="modal-header">Crear nueva categoria</div>
 						<div class="modal-body">
 							<div class="row">
 								<div class="col-md-12 col-xs-10">
 									<h4>Datos de categoría</h4>
 									<p>
-										Nombre <input value="#{categoriaMB.nuevaCategoria.nombre}" type="text" class="col-xs-7 form-control" />
+										Nombre <h:inputText value="#{categoriaMB.nuevaCategoria.nombre}" type="text" class="col-xs-7 form-control" />
 									</p>
 									<p>
-										Descripcion <input value="#{categoriaMB.nuevaCategoria.descripcion}" type="text" class="col-xs-7 form-control" />
+										Descripcion <h:inputText value="#{categoriaMB.nuevaCategoria.descripcion}" type="text" class="col-xs-7 form-control" />
+									</p>
+									<p>
+										Habilitada <h:selectBooleanCheckbox value="#{categoriaMB.nuevaCategoria.habilitada}" type="checkbox"/>
 									</p>
 								</div>
 							</div>
-						</div>
+						</div>						
 						<div class="modal-footer">
-								<h:commandButton value="Confirmar" action="#{categoriaMB.crearCategoria}" />
-								<h:commandButton value="Cancelar" action="#{categoriaMB.ocultarPanelIngreso}" />
+							<h:message for="btnConfirmarIngreso" class="error" />
+							<h:commandButton id="btnConfirmarIngreso" value="Confirmar" action="#{categoriaMB.crearCategoria}" />
+							<h:commandButton value="Cancelar" action="#{categoriaMB.ocultarPanelIngreso}" />
 						</div>
 					</div>
 				</div>
 			</h:form>
 		</h:panelGroup>
-		
+
 		<h:panelGroup id="panelEliminar" rendered="#{categoriaMB.activoPanelEliminar}">
 		<h:form>
 		<div class="modal loginDiv modal-dialog"
